--- a/static-models-comparison.html
+++ b/static-models-comparison.html
@@ -2343,7 +2343,19 @@
             modelDiv.className = 'flex gap-2';
 
             // Capability icons
-            if (model.isAvailableInCursor) {
+            const cursorAvailableModels = [
+                'claude-3.5-haiku', 'claude-3.5-sonnet', 'claude-3.7-sonnet',
+                'claude-4-opus', 'claude-4-sonnet', 'claude-4-sonnet-1m', 'claude-4.1-opus',
+                'deepseek-r1-0528', 'deepseek-v3.1',
+                'gemini-2.5-flash', 'gemini-2.5-pro',
+                'gpt-4.1', 'gpt-4o',
+                'gpt-5', 'gpt-5-fast', 'gpt-5-high', 'gpt-5-high-fast', 'gpt-5-low', 'gpt-5-low-fast', 'gpt-5-medium', 'gpt-5-medium-fast', 'gpt-5-mini', 'gpt-5-nano',
+                'grok-3', 'grok-3-mini', 'grok-4', 'grok-code-fast-1',
+                'kimi-k2-instruct',
+                'o3', 'o3-pro', 'o4-mini'
+            ];
+            
+            if (cursorAvailableModels.includes(model.name)) {
                 const cursorIcon = document.createElement('div');
                 cursorIcon.className = 'icon icon-blue';
                 cursorIcon.textContent = '💻';
